# mattstack

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
src/mattstack/: cli.py  config.py  presets.py
src/mattstack/auditors/: endpoints.py
src/mattstack/commands/: add.py  context.py  db.py  deps.py  dev.py  generate.py  health.py  hooks.py  info.py  init.py  lint.py  sync.py  test.py  upgrade.py  workflow.py
src/mattstack/parsers/: django_models.py  django_routes.py
src/mattstack/post_processors/: frontend_config.py
src/mattstack/templates/: root_claude_md.py  root_readme.py
tasks/: todo.md
tests/: test_context_commands.py  test_django_matt.py  test_presets.py
tests/test_commands/: test_generate.py  test_hooks.py  test_init.py  test_lint.py  test_sync.py  test_test_runner.py  test_workflow.py
tests/test_parsers/: test_django_matt_routes.py
